# aegis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PROMPT.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f3c080840954_initial_schema.py
backend/app/: celery_app.py  config.py  database.py  logging.py  main.py
backend/app/api/: deps.py
backend/app/integrations/: base.py  blackboard_client.py  canvas_client.py  garmin_client.py  gmail_client.py  google_calendar_client.py  linkedin_client.py  news_aggregator.py  outlook_client.py  pearson_scraper.py  plaid_client.py  schwab_client.py  web_crawler.py  whatsapp_bridge.py  x_client.py
backend/app/models/: __init__.py  account.py  assignment.py  briefing.py  contact.py  content.py  credential.py  email_digest.py  health.py  meeting.py  productivity.py  user.py  whatsapp.py
backend/app/security/: __init__.py  audit.py  auth.py  encryption.py  monitoring.py  rate_limit.py  token_blocklist.py  url_validator.py
backend/app/services/: assignment_tracker.py  contact_graph.py  content_engine.py  daily_briefing.py  email_analyzer.py  finance_analyzer.py  health_optimizer.py  meeting_transcriber.py  productivity_analyzer.py  social_poster.py
backend/app/tasks/: calendar_sync.py  content_generation.py  email_sync.py  (+6 more)
backend/tests/: conftest.py  test_auth.py  test_calendar.py  test_celery_tasks.py  test_content.py  test_email.py  test_encryption.py  test_finance.py  test_health.py  test_health_fitness.py  test_live_stack.py  test_logging.py  test_security_pentest.py  test_social.py  test_url_validator.py
(+84 files in other folders)
