[project]
name = "clawdbot"
version = "0.1.0"
description = "ClawdBot personal intelligence platform — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "celery[redis]>=5.4.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "cryptography>=44.0.0",
    "tenacity>=9.0.0",
    "PyJWT[crypto]>=2.9.0",
    "bcrypt>=4.2.0",
    "pyotp>=2.9.0",
    "anthropic>=0.39.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.22",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
integrations = [
    "plaid-python>=26.0.0",
    "tweepy>=4.14.0",
    "canvasapi>=3.3.0",
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "deepgram-sdk>=3.8.0",
]
ml = [
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "faster-whisper>=1.1.0",
]
dev = [
    "factory-boy>=3.3.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "B008",  # Depends() in function defaults is standard FastAPI pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
"alembic/**" = ["E501", "UP", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
